--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,8 @@
  RESET
  */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
-a { color: #2266BB; text-decoration: none;}
-a:hover { color: #00AEEF; }
-a:focus {outline:1px dotted}
+a { color: #444444; text-decoration: none;}
+a:hover { text-decoration: underline;}
 ol{list-style:decimal}
 ul{list-style:none}
 li{margin-left:0px}
@@ -25,6 +24,7 @@ h4 { font-size:16px; }
  ELEMENTS
  */
 body{ background:#E6EAEF;}
+
 #container{
 	width:400px;
 	height:400px;
@@ -36,8 +36,17 @@ body{ background:#E6EAEF;}
 	-webkit-box-shadow: 0px 0px 6px #C9C9C9;
 	box-shadow: 0px 0px 6px #C9C9C9;
 }
+
 #myname{
-	margin-top:10px;
+	margin-top:24px;
 	font-size:xx-large;
-	text-align:center;
+	margin-left:32px;
 }
+#contacts{ margin-top:16px; margin-left:32px; font-size:small; height:24px;}
+#contacts a{height:28px; margin-right:16px; padding-left:20px;background-repeat: no-repeat; background-position: left center; display:block;}
+#contacts .facebook{ background-image: url('../images/facebook.png');}
+#contacts .twitter{ background-image: url('../images/twitter.png');}
+#contacts .github{ background-image: url('../images/github.png');}
+#contacts .email{ background-image: url('../images/email.png');}
+#contacts .phone{ background-image: url('../images/email.png');}
+#contacts .cv{ background-image: url('../images/cv.png');}
