--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,14 @@ body{ background:#E6EAEF;}
 	font-size:xx-large;
 	margin-left:32px;
 }
+#summary{
+	margin-top:2px;
+	font-size:medium;
+	color:#BEBEBE;
+	font-style:italic;
+	font-size:medium;
+	margin-left:32px;
+}
 #contacts{ margin-top:16px; margin-left:32px; font-size:small; height:24px;}
 #contacts a{height:28px; margin-right:16px; padding-left:20px;background-repeat: no-repeat; background-position: left center; display:block;}
 #contacts .facebook{ background-image: url('../images/facebook.png');}
