--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,14 @@
  RESET
  */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
-a { color: #444444; text-decoration: none;}
+a { color: #555555; text-decoration: none;}
 a:hover { text-decoration: underline;}
 ol{list-style:decimal}
 ul{list-style:none}
 li{margin-left:0px}
 html{ overflow-y : scroll; }
-body { font: 14px "Lucida Grande",  Helvetica, Arial; line-height:24px;  color:#222;  padding: 0; margin: 0; }
-body#full-page { background:  #fdfdfb center top; }
-h1, h2, h3, h4, h5, h6 { font: 18px  Verdana, Helvetica, Arial, sans-serif; color:#444;} 
+body { font: 14px Helvetica, Arial; line-height:24px;  color:#555555;  padding: 0; margin: 0; }
+h1, h2, h3, h4, h5, h6 { font: 18px  Verdana, Helvetica, Arial, sans-serif; color:#555555;} 
 h3, h4, h5, h6 { font-weight:bold; color:#aaa;} 
 h1, h2, h3 {  margin-bottom:20px; }
 h4 { font-size:16px; }
@@ -19,43 +18,67 @@ h4 { font-size:16px; }
 * html .clearfix,*:first-child+html .clearfix{zoom:1}
 .right{ float:right !important; overflow:auto;}
 .left{ float:left !important; overflow:auto;}
+.medium{size:medium;font-size:medium;}
+.large{size:large;font-size:large;}
+.small{size:small;font-size:small;}
+.xlarge{size:x-large;font-size:x-large;}
 
 /**
  ELEMENTS
  */
-body{ background:#E6EAEF;}
+body{ background:#EEEEEE}
 
-#container{
-	width:400px;
-	height:400px;
+.zvm-container{
 	margin:auto;
-	margin-top:100px;
-	background:#FFFFFF;
-	border: 1px solid #ccc;
-	-moz-box-shadow: 0px 0px 6px #C9C9C9;
-	-webkit-box-shadow: 0px 0px 6px #C9C9C9;
-	box-shadow: 0px 0px 6px #C9C9C9;
+	margin-top:60px;
+	padding:28px;
+	
+	background-color:#FBFBFB;
+	border-top: solid 1px #FFFFFF;
+	border-left: solid 1px #FFFFFF;
+	border-right: solid 1px #FFFFFF;	
+
+	-webkit-border-radius: 16px;
+	-moz-border-radius-topleft: 16px;
+	border-radius: 16px;
+	
+	-moz-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
+	-o-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
+	box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;	
+	
+}
+.zvm-container .zvm-container-title{
+	margin:0px 0px 0px -8px;
+	height:48px;
+	font-size:xx-large;
+	text-shadow: #FFFFFF 0 1px 0;
+}
+.zvm-container .zvm-container-section{
+	border:solid 1px #EFEFEF;
+	margin:8px 0px 8px 0px;
+	padding:7px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+.zvm-container .zvm-container-section .item{
 }
 
-#myname{
-	margin-top:24px;
-	font-size:xx-large;
-	margin-left:32px;
+.zvm-contacts{ font-size:small; height:24px;}
+.zvm-contacts a{
+	height:28px;
+	margin:0px 16px 0px 0px;
+	padding:0px 0px 0px 24px;
+	background-repeat: no-repeat;
+	background-position: 0px 3px;
+	display:block;
 }
-#summary{
-	margin-top:2px;
-	font-size:medium;
-	color:#BEBEBE;
-	font-style:italic;
-	font-size:medium;
-	margin-left:32px;
-}
-#contacts{ margin-top:16px; margin-left:32px; font-size:small; height:24px;}
-#contacts a{height:28px; margin-right:16px; padding-left:20px;background-repeat: no-repeat; background-position: left center; display:block;}
-#contacts .facebook{ background-image: url('../images/facebook.png');}
-#contacts .twitter{ background-image: url('../images/twitter.png');}
-#contacts .github{ background-image: url('../images/github.png');}
-#contacts .quora{ background-image: url('../images/quora.png');}
-#contacts .email{ background-image: url('../images/email.png');}
-#contacts .phone{ background-image: url('../images/phone.png');}
-#contacts .cv{ background-image: url('../images/cv.png');}
+.zvm-contacts .facebook{ background-image: url('../images/facebook.png');}
+.zvm-contacts .twitter{ background-image: url('../images/twitter.png');}
+.zvm-contacts .github{ background-image: url('../images/github.png');}
+.zvm-contacts .quora{ background-image: url('../images/quora.png');}
+.zvm-contacts .email{ background-image: url('../images/email.png');}
+.zvm-contacts .phone{ background-image: url('../images/phone.png');}
+.zvm-contacts .projects{ background-image: url('../images/projects.png');}
+.zvm-contacts .cv{ background-image: url('../images/cv.png');}
