--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,10 @@ h4 { font-size:16px; }
 .large{size:large;font-size:large;}
 .small{size:small;font-size:small;}
 .xlarge{size:x-large;font-size:x-large;}
-
+.light{color:#BBBBBB;}
+.black{color:#333333;}
+.gray{color:#999999;}
+	
 /**
  ELEMENTS
  */
@@ -82,3 +85,7 @@ body{ background:#EEEEEE}
 .zvm-contacts .phone{ background-image: url('../images/phone.png');}
 .zvm-contacts .projects{ background-image: url('../images/projects.png');}
 .zvm-contacts .cv{ background-image: url('../images/cv.png');}
+
+footer{padding:48px 0px 24px 0px; text-align:center;}
+footer a{color:#AAAAAA;}
+footer a:hover{text-decoration:none; color:#777777;}
